[project]
name = "modpmv"
version = "0.4.0-deluxe"
description = "ModPMV V4 Deluxe — YTPMV generation with module-tracker adapter, plugin pipeline and ffmpeg rendering"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="ModPMV Contributors"}]

dependencies = [
  "PyQt6>=6.5",
  "pydub>=0.25.1",
  "moviepy==1.0.3",
  "librosa>=0.10.0",
  "numpy>=1.24",
  "soundfile>=0.12.1",
  "imageio-ffmpeg>=0.4.7",
  "tqdm>=4.65"
]

[project.optional-dependencies]
# new optional binding package (module-tracker). Replace with actual package name you use.
openmpt = ["module-tracker"]
extras = ["opencv-python", "numba"]