[project]
name = "modpmv"
version = "0.5.0"
description = "ModPMV V5 Deluxe — YTPMV generation with streaming ffmpeg, module-tracker adapter and plugin pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="ModPMV Contributors"}]

dependencies = [
  "PyQt6>=6.5",
  "pydub>=0.25.1",
  "moviepy==1.0.3",
  "librosa>=0.10.0",
  "numpy>=1.24",
  "soundfile>=0.12.1",
  "imageio-ffmpeg>=0.4.7",
  "tqdm>=4.65",
  "Pillow>=9.0"
]

[project.optional-dependencies]
openmpt = ["module-tracker"]
extras = ["opencv-python", "numba"]